HTML/CSS : finalisation du header

--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
           <span class="navbar-toggler-icon"></span>
           </button>
         </nav>
-        <p class="welcome">WELCOME</p>
-        <p class="header-txt">LOGAN<br>CREATIVE<br>STUDIO</p>
-        <p class="phrase-txt">Best digital solution for your business ! Let we<br>bring amazing for you !</p>
-        <img src="assets/img/down.png" class="down">
+        <p class="header--welcome">WELCOME</p>
+        <span class="header--precedent">PREV</span>
+        <span class="header--suivant">NEXT</span>
+        <p class="header--txt">LOGAN<br>CREATIVE<br>STUDIO</p>
+        <p class="header--phrase-txt">Best digital solution for your business ! Let we<br>bring amazing for you !</p>
+        <img src="assets/img/down.png" class="header--down">
+        <span class="header--points">...</span>
       </header>
+      <div class="content">
+          
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
