HTML(index): fin de la section

--- a/index.html
+++ b/index.html
@@ -14,24 +14,53 @@
   <body>
     <div id="app">
       <header>
+      <!-- CONTENU DU HEADER -->
         <div class="header--logo">
           <h1>LOGANCEE</h1>
         </div>
+        <!-- BOUTON DE NAV -->
         <nav class="navbar navbar-dark navigation">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
           <span class="navbar-toggler-icon"></span>
           </button>
         </nav>
-        <p class="header--welcome">WELCOME</p>
-        <span class="header--precedent">PREV</span>
-        <span class="header--suivant">NEXT</span>
-        <p class="header--txt">LOGAN<br>CREATIVE<br>STUDIO</p>
-        <p class="header--phrase-txt">Best digital solution for your business ! Let we<br>bring amazing for you !</p>
-        <img src="assets/img/down.png" class="header--down">
-        <span class="header--points">...</span>
+          <p class="header--welcome">WELCOME</p>
+          <span class="header--precedent">PREV</span>
+          <span class="header--suivant">NEXT</span>
+          <p class="header--txt">LOGAN<br>CREATIVE<br>STUDIO</p>
+          <p class="header--phrase-txt">Best digital solution for your business ! Let we<br>bring amazing for you !</p>
+          <img src="assets/img/down.png" class="header--down">
+          <span class="header--points">...</span>
       </header>
+      <!-- CONTENU DU SITE -->
       <div class="content">
-          
+          <div class="content--space">
+            <span class="vertical-line"></span>
+          </div>
+          <!-- SECTION 1 -->
+          <div class="section-1">
+            <div class="sous-section">
+              <span class="about">ABOUT US</span>
+              <h3 class="txt-01">THINK OUT OF<br>THE BOX.</h3>
+              <p class="paragraph"> If you never venture outside the box, you will probably not be creative. But if you never get inside the box, you will vertainly be stupid. don't think outside the box, think like there is No Box !</p>
+            </div>
+            <img src="assets/img/image1.jpg" class="image--section-1">
+          </div>
+          <div class="content--space">
+            <span class="vertical-line2"></span>
+          </div>
+          <!-- SECTION 2 -->
+          <div class="section-1">
+            <div class="sous-section">
+              <span class="about">WHAT WE DO</span>
+              <h3 class="txt-01">DEER AGENCY<br>WEBSITE.</h3>
+              <p class="paragraph"> If you never venture outside the box, you will probably not be creative. But if you never get inside the box, you will vertainly be stupid. don't think outside the box, think like there is No Box !</p>
+            </div>
+            <img src="assets/img/image1.jpg" class="image--section-1">
+          </div>
+          <div class="content--space">
+            <span class="vertical-line2"></span>
+          </div>
       </div>
     </div>
 
