--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -52,14 +52,47 @@
           <!-- SECTION 2 -->
           <div class="section-1">
             <div class="sous-section">
-              <span class="about">WHAT WE DO</span>
-              <h3 class="txt-01">DEER AGENCY<br>WEBSITE.</h3>
-              <p class="paragraph"> If you never venture outside the box, you will probably not be creative. But if you never get inside the box, you will vertainly be stupid. don't think outside the box, think like there is No Box !</p>
+              <span class="about2">WHAT WE DO</span>
+              <h3 class="txt-02">DEER AGENCY<br>WEBSITE.</h3>
+              <p class="paragraph2"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.</p>
             </div>
-            <img src="assets/img/image1.jpg" class="image--section-1">
+            <img src="assets/img/aheuh.jpeg" class="image--section-2">
           </div>
           <div class="content--space">
-            <span class="vertical-line2"></span>
+            <span class="vertical-line"></span>
+          </div>
+          <!-- RECENTS WORk -->
+          <div class="recent-works">
+            <span class="recent-works--first-title">RECENT WORKS</span>
+            <h3 class="recent-works--title">ART IS NOT WHAT YOU SEE !</h3>
+            <div class="recent-works--nav">
+              <span class="recent-works--nav--item">ALL</span>
+              <span class="recent-works--nav--item">PHOTOGRAPHY</span>
+              <span class="recent-works--nav--item">BRANDING</span>
+              <span class="recent-works--nav--item">WEB DESIGN</span>
+              <span class="recent-works--nav--item">ANIMATION</span>
+            </div>
+            <div class="works-images">
+              <img src="assets/img/work-1.jpg" class="works-images--size">
+              <img src="assets/img/work-2.jpg" class="works-images--size">
+              <img src="assets/img/work-3.png" class="works-images--size">
+              <img src="assets/img/work-4.jpg" class="works-images--size2">
+              <img src="assets/img/work-5.jpg" class="works-images--size2">
+              <img src="assets/img/work-7.jpeg" class="works-images--size">
+              <img src="assets/img/work-8.jpg" class="works-images--size">
+              <img src="assets/img/work-6.jpeg" class="works-images--size3">
+            </div>
+            <span class="all">VIEWS ALL PROJECTS > </span>
+            <div class="sponso">
+              <img src="assets/img/logo-1.jpg" class="sponso-images--size">
+              <img src="assets/img/logo-2.png" class="sponso-images--size">
+              <img src="assets/img/logo-3.png" class="sponso-images--size">
+              <img src="assets/img/logo-4.png" class="sponso-images--size">
+              <img src="assets/img/logo-5.png" class="sponso-images--size">
+            </div>
           </div>
       </div>
     </div>
