HTML(index): footer finished

--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
             </div>
           </div>
       </div>
+      <!-- FOOTER -->
+      <footer>
+        <div class="footer">
+          <div class="reseaux">
+            <img src="assets/img/facebook.svg" class="reseaux-sociaux--image">
+            <img src="assets/img/twitter.svg" class="reseaux-sociaux--image">
+            <img src="assets/img/instagram.svg" class="reseaux-sociaux--image">
+          </div>
+          <p class="copyright">© 2020 Logancee. All right reserved</p>
+        </div>
+      </footer>
     </div>
 
     <!-- Optional JavaScript -->
